--- a/Index.html
+++ b/Index.html
@@ -32,8 +32,74 @@
 
         <h1 id="Title-name" class="Title-name">Complete Computer Care & Micro Solutions</h1>
 
-        <div class="tab" id="tab1">
-            <h3>Phone Number</h3>
+        <div class="tab" id="tab1">  
+            <form action="#" onsubmit="return false">
+                <div class="user-details" >
+                   
+                    <div class="input-div" >
+                        <spam class="details" for="phn">Phone Number</spam><br>
+                        <input type="text" name="phn" id="phn" placeholder="Enter Phone Number" required> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="cust_name">Customer Name</spam><br>
+                        <input type="text" name="cust_name" id="cust_name" placeholder="Enter Customer Name" required> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="address">Address</spam><br>
+                        <input type="text" name="address" id="address" placeholder="Enter Address" required> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="serial_no">Serial Number</spam><br>
+                        <input type="text" name="serial_no" id="serial_no" placeholder="Enter Serial Number" required> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="model">Model</spam><br>
+                        <input type="text" name="model" id="model" placeholder="Enter Model" required> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="type">Type</spam><br>
+                        <select name="type" id="type" required > </select>
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="warranty_type">Warranty Type</spam><br>
+                        <input type="radio" name="warrantyType" id="dot-1">
+                        <label for="dot-1">
+                            <spam class="dot one"></spam><br>
+                            <spam class="warranty_type">Warranty</spam><br>
+                        </label>
+                        <input type="radio" name="warrantyType" id="dot-2">
+                        <label for="dot-2">
+                            <spam class="dot one"></spam><br>
+                            <spam class="warranty_type">Non Warranty</spam><br>
+                        </label>
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="status">Status</spam><br>
+                        <select name="status" id="status" required > 
+                            <option value="" disabled selected hidden invalid>--Select Type--</option>
+                            <option value="fresh">Fresh</option>
+                            <option value="repeat">Repeat</option>
+                        </select>
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="pageCount">Page Count</spam><br>
+                        <input type="text" name="pageCount" id="pageCount" placeholder="Enter Page Count" required> 
+                    </div>
+                  
+                    <div class="input-div" >
+                        <spam class="details" for="problem">Problem</spam><br>
+                        <textarea name="problem" id="problem" cols="50" rows="10" placeholder="Enter Problem" required></textarea> 
+                    </div>
+                    <div class="input-div" >
+                        <spam class="details" for="note">Note</spam><br>
+                        <textarea name="note" id="note" cols="50" rows="5" placeholder="Enter note" ></textarea> 
+                    </div>
+                </div>
+                <div class="button">
+                    <input type="submit" value="Save">
+                    <input type="reset" value="Clear">
+                </div>
+            </form>
         </div>
         <div class="tab" id="tab2">
             <h3>Job No.</h3>
