Modified-- radio buttons pending

--- a/Index.html
+++ b/Index.html
@@ -37,44 +37,46 @@
                 <div class="user-details" >
                    
                     <div class="input-div" >
-                        <spam class="details" for="phn">Phone Number</spam><br>
+                        <span class="details" for="phn">Phone Number</span><br>
                         <input type="text" name="phn" id="phn" placeholder="Enter Phone Number" required> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="cust_name">Customer Name</spam><br>
+                        <span class="details" for="cust_name">Customer Name</span><br>
                         <input type="text" name="cust_name" id="cust_name" placeholder="Enter Customer Name" required> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="address">Address</spam><br>
+                        <span class="details" for="address">Address</span><br>
                         <input type="text" name="address" id="address" placeholder="Enter Address" required> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="serial_no">Serial Number</spam><br>
+                        <span class="details" for="serial_no">Serial Number</span><br>
                         <input type="text" name="serial_no" id="serial_no" placeholder="Enter Serial Number" required> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="model">Model</spam><br>
+                        <span class="details" for="model">Model</span><br>
                         <input type="text" name="model" id="model" placeholder="Enter Model" required> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="type">Type</spam><br>
+                        <span class="details" for="type">Type</span><br>
                         <select name="type" id="type" required > </select>
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="warranty_type">Warranty Type</spam><br>
-                        <input type="radio" name="warrantyType" id="dot-1">
-                        <label for="dot-1">
-                            <spam class="dot one"></spam><br>
-                            <spam class="warranty_type">Warranty</spam><br>
-                        </label>
-                        <input type="radio" name="warrantyType" id="dot-2">
-                        <label for="dot-2">
-                            <spam class="dot one"></spam><br>
-                            <spam class="warranty_type">Non Warranty</spam><br>
-                        </label>
+                        <input type="radio" name="warranty_type" id="dot-1">
+                        <input type="radio" name="warranty_type" id="dot-2" >
+                        <span class="details">Warranty Type</span><br>
+                           <div class="category">
+                            <label for="dot-1">
+                                <span class="dot one"></span>
+                                <span class="warranty_type">Warranty</span>
+                            </label>
+                            <label for="dot-2">
+                                <span class="dot one"></span>
+                                <span class="warranty_type">Non Warranty</span>
+                            </label>
+                           </div>
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="status">Status</spam><br>
+                        <span class="details" for="status">Status</span><br>
                         <select name="status" id="status" required > 
                             <option value="" disabled selected hidden invalid>--Select Type--</option>
                             <option value="fresh">Fresh</option>
@@ -82,16 +84,16 @@
                         </select>
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="pageCount">Page Count</spam><br>
+                        <span class="details" for="pageCount">Page Count</span><br>
                         <input type="text" name="pageCount" id="pageCount" placeholder="Enter Page Count" required> 
                     </div>
                   
                     <div class="input-div" >
-                        <spam class="details" for="problem">Problem</spam><br>
+                        <span class="details" for="problem">Problem</span><br>
                         <textarea name="problem" id="problem" cols="50" rows="10" placeholder="Enter Problem" required></textarea> 
                     </div>
                     <div class="input-div" >
-                        <spam class="details" for="note">Note</spam><br>
+                        <span class="details" for="note">Note</span><br>
                         <textarea name="note" id="note" cols="50" rows="5" placeholder="Enter note" ></textarea> 
                     </div>
                 </div>
