--- a/service/Index.html
+++ b/service/Index.html
@@ -17,7 +17,7 @@
 <body>
     <div class="Header" id="Header">
         <div class="logo">
-            <img src="D:\Web Development\JS\3CM online logo.png" alt="Avtar" class="logo-file">
+            <img src="Images/3cm-service.png" alt="Avtar" class="logo-file">
         </div>
     </div>
      <div class="menu" id="menu">
