--- a/POS software/index-pos.html
+++ b/POS software/index-pos.html
@@ -8,8 +8,20 @@
     </head>
 
     <body>
+        <!-- Header Menu -->
         <div class="top-nav" >
             <h2>Kitchen Master</h2>
+            <ul class="top-nav-menu">
+                <li style="cursor: default;">User</li>
+                <li>Logout</li>
+                <li > <input type="checkbox" name="lock_box" id="lock_box" > Lock </li>
+            </ul>
+        </div>
+
+        <!-- Main Body -->
+        <div class="split-body">
+            <div class="left-div"></div>
+            <div class="right-div"></div>
         </div>
     </body>
 
